After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727540 - #include "pty.h" cause build failure on FreeBSD
#include "pty.h" cause build failure on FreeBSD
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
unspecified
Other FreeBSD
: Normal normal
: ---
Assigned To: VTE Maintainers
VTE Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-03 12:52 UTC by Ting-Wei Lan
Modified: 2014-04-13 09:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove unused pty.h header (798 bytes, patch)
2014-04-03 12:52 UTC, Ting-Wei Lan
accepted-commit_now Details | Review
build: Remove unused pty.h header (805 bytes, patch)
2014-04-03 14:59 UTC, Ting-Wei Lan
accepted-commit_now Details | Review

Description Ting-Wei Lan 2014-04-03 12:52:36 UTC
Created attachment 273524 [details] [review]
Remove unused pty.h header

pty.h is already removed in vte, so we should also remove it from other source files.
Comment 1 Christian Persch 2014-04-03 13:32:47 UTC
Comment on attachment 273524 [details] [review]
Remove unused pty.h header

Do use a commit message in the 'build: foo bar' form.
Comment 2 Ting-Wei Lan 2014-04-03 14:59:49 UTC
Created attachment 273533 [details] [review]
build: Remove unused pty.h header