build: Remove unused pty.h header

https://bugzilla.gnome.org/show_bug.cgi?id=727540